# sandbox

./: .gitignore
bleu-rouge/: main.py
bleu_rouge/: pyproject.toml
bleu_rouge/tests/: test_similarity_scores.py
coding_test/: README.md  pyproject.toml
coding_test/coding_test/: python_coding_test.ipynb  sql_commons.py
coding_test/coding_test/datascience/: decision-trees.ipynb  deep_learning_with_python.md  linear_algebra.ipynb  ml_commons.ipynb  pandas_commons.ipynb  probability-information-theory.ipynb  xgboost-classification.ipynb  xgboost-regression.ipynb
coding_test/coding_test/python/: big_o_challenges.ipynb  datasctructures.ipynb  educative_challenges.ipynb  python-questions.md  python_commons.ipynb
coding_test/coding_test/sql/: cracking_code_interview.md  cracking_sql_interview.ipynb  sql_basics.ipynb  sql_be_the_outlier.ipynb  sql_interview.ipynb  tutorial.db
coding_test/coding_test/tests/: pytest.md
connect-four/: pyproject.toml
connect-four/connectfour/: callbacks.py  dummy_policies.py  wrappers.py
connect-four/models/: __init__.py
connect-four/models/learned/: model.onnx  model.pt
connect-four/models/learned_v399/: model.onnx  model.pt
connect-four/models/learned_v400/: model.onnx  model.pt
connect-four/models/learned_v401/: model.onnx  model.pt
connect-four/models/learned_v402/: model.onnx  model.pt
connect-four/models/learned_v403/: model.onnx  model.pt
connect-four/models/learned_v404/: model.onnx  model.pt
connect-four/notebooks/: connect4.py  connect4_rllib.ipynb  test.ipynb
corpus_preparation/: README.md  pyproject.toml
corpus_preparation/data/: __init__.py  ebook-transformer.xsl  ebook-transformer.xslt  introduction-snippet.html  introduction.html  raw-chapter-1.xml
corpus_preparation/notebooks/: content_cleaning.ipynb  content_evaluation.ipynb
eda-as-usual/: README.md  caseStudy.html  pyproject.toml
eda-as-usual/data/: Database_D3S_Cost_March8_vf_anon.xlsx  Database_D3S_Price_March8_vf_anon.xlsx  __init__.py  prescriptions_dataset.json
eda-as-usual/notebooks/: d3s-eda.ipynb  iris-eda.ipynb  phealing-case-study.ipynb  photo_swann.ipynb  places-api.ipynb  titanic-eda.ipynb  wine-eda.ipynb
finetune-llm/: .gitignore  pyproject.toml
finetune-llm/artefacts/: __init__.py  saved_global_climate_change_litigation.csv
finetune-llm/notebooks/: extract-from-climate-case.ipynb  extract-structured-info.ipynb  finetune-llama2.ipynb  gpu-memory.ipynb  hf-llama2.ipynb  llama2-inference.ipynb  nous-hermes-inference.ipynb  run-llama-gguf.ipynb
finetune-llm/results/: 2048-matching_results_trec_2022_Phi-3-medium-4k-instruct.json  4096-matching_results_trec_2022_Phi-3-medium-4k-instruct.json  matching_results_trec_2021_Phi-3-medium-4k-instruct.json  matching_results_trec_2021_SOLAR-10.7B-Instruct.json  matching_results_trec_2022_Phi-3-medium-4k-instruct.json  matching_results_trec_2022_SOLAR-10.7B-Instruct.json
finetune-llm/tests/: test_trialgpt.py
lm-from-scratch/: README.md  pyproject.toml
lm-from-scratch/artefacts/: __init__.py  decision-tokenizer.json
lm-from-scratch/artifacts/: __init__.py  decision-tokenizer.json
lm-from-scratch/lm_from_scratch/corpus/: decision_corpus.py  tiny_shakespeare.py
lm-from-scratch/lm_from_scratch/models/: bert.py  bert_2.py  bigram.py  gpt_ma.py  gpt_ma_2.py  gpt_sa.py  t5.py  t5_small.py  transformer.py
lm-from-scratch/lm_from_scratch/preprocessing/: bert_preprocessing.py
lm-from-scratch/lm_from_scratch/tokenizers/: char_tokenizer.py
lm-from-scratch/notebooks/: bert.ipynb  bigram.ipynb  bigram_clean.ipynb  common.ipynb  gpt_ma.ipynb  gpt_sa.ipynb  sentencepiece_tokenizer.model  sentencepiece_tokenizer.vocab  t5.ipynb  t5_tokenizer.ipynb  transformer.ipynb
lm-from-scratch/tests/: test_relative_position_embedding.py  test_sentence_parser.py  test_t5.py
naat/: README.md  nocodb-client.js  output.json  package-lock.json  package.json  pyproject.toml  webpack.config.js
naat/addon/: appsscript.json  checkfile.ts  readme.md  sidebar.html
naat/artifacts/: __init__.py
naat/artifacts/arianeweb/: CAA_documents_reverses.csv  CE_documents_reverses.csv  TA_documents_reverses.csv  TA_documents_reverses_.csv  readme.md
naat/artifacts/nocodb/: naat-03-02-2024.dump  naat-03-02-2024.tar.xz
naat/naat/: corpus.py  data.py  main.py  tokenizers.py
naat/naat/data/: litigation_cases_24022023.csv
naat/naat_core/: corpus.py  data.py  main.py  search_engine.py  sql_commons.py
naat/naat_data/: Copy of Dejusticia.docx  __init__.py  flags_iso.csv
naat/naat_db/: agents.csv  create_db.ipynb  create_db.sql  create_db_alter_1.sql  create_db_alter_2.sql  create_db_alter_3.sql  create_db_alter_4.sql  create_db_alter_5.sql  create_db_alter_6.sql  create_db_alter_7.sql  grounds.csv  index.html  index_1.html  jurisdictions.csv  legalcases.csv  prepopulate_db.ipynb  resources.csv  test.html
naat/notebooks/: dataset.pt  eda_gdrive_api.ipynb  eda_gdrive_labels.ipynb  eda_global_litigation_cases.ipynb  eda_languages.ipynb  eda_us_litigation_cases.ipynb  files_processing.ipynb  model_training.ipynb  pdf_preprocessing.ipynb  preprocess_global_litigation_cases.ipynb  test.html
naat/tests/: test.html  test_doc_files.py  test_docx_corpus.py  test_docx_files.py  test_pdf_files.py  test_preprocess.py
pdf_content_extractor/: README.md  pyproject.toml
pdf_content_extractor/data/: dice-10943.epub
pdf_content_extractor/notebooks/: content_evaluation.ipynb  content_extraction.ipynb  preprocessing.ipynb
sabin-center-climate-cases/: README.md  pyproject.toml
sabin-center-climate-cases/artifacts/: Global-Cases-Export-2024-02-16.csv  US-Case-Bundles-2024-02-16.csv  __init__.py  global_cases.csv  us_cases.csv
sabin-center-climate-cases/notebooks/: eda.ipynb
sabin-center-climate-cases/translate_sabin/: dbt_project.yml
webstat-tsclustering/: pyproject.toml
webstat-tsclustering/tsclustering/: ad_viz_plotval_data.csv  catalogue.csv  catalogue.md  clustering.ipynb  data.ipynb  data.py  eda.ipynb  final_df.csv  main.ipynb  profile_report.html  serie_timespans.md  text_processing.py  visualization.py
(+185 files in other folders)
