# https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "connectfour"
version = "0.1.0"
description = "Connect Four"
authors = ["Clément Brutti-Mairesse <clement.brutti.mairesse@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https:/ClementBM/connectfour"
repository = "https:/ClementBM/connectfour"
keywords = ["connectfour", "connect4", "reinforcement learning"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
orjson = "3.8.8"
gradio = "^3.23.0"
ray = {extras = ["rllib","default"], version = "^2.2.0"}
pettingzoo = "*" # "^1.22.4"
pygame = "^2.3.0"
torch = "^2.0.0"
libclang = "15.0.6.1"
tensorflow-probability = "^0.19.0"
protobuf = "3.19.6"
scipy = ">=1.8,<1.9.2"
onnx = "1.12.0"
tensorboard = "^2.12.0"

[tool.poetry.dev-dependencies]
pylint = "*"
pytest = "*"
mypy = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"