# https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "finetune_llm"
version = "0.1.0"
description = "Fine Tune LLM"
authors = ["Clément Brutti-Mairesse <clement.brutti.mairesse@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ClementBM/sandbox"
repository = "https://github.com/ClementBM/sandbox"

include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = ">=2.0.0, !=2.0.1"
transformers = "^4.33.1"
trl = "^0.7.1"
datasets = "^2.14.5"
peft = "^0.5.0"
bitsandbytes = "^0.41.1"
accelerate = "^0.22.0"
scipy = "^1.11.2"
nvidia-ml-py3 = "^7.352.0"
ctransformers = {extras = ["cuda"], version = "^0.2.27"}
tabulate = "^0.9.0"
langchain = "^0.0.304"
optimum = "^1.13.2"
auto-gptq = "^0.4.2"
huggingface-hub = "^0.23.4"
cmake = "^3.29.6"
openai = "^1.35.12"
nltk = "^3.8.1"

[tool.poetry.dev-dependencies]
pylint = "*"
pytest = "*"
mypy = "*"
jupyter = "*"
notebook = "*"
ipykernel = "*"
black = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
coverage = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"