# https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "lm_from_scratch"
version = "0.1.0"
description = "LM FROM SCRATCH"
authors = ["Clément Brutti-Mairesse <clement.brutti.mairesse@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ClementBM/sandbox"
repository = "https://github.com/ClementBM/sandbox"

include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "=2.0.0"
numpy = "^1.26.1"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
tokenizers = "^0.14.1"

[tool.poetry.dev-dependencies]
pylint = "*"
pytest = "*"
mypy = "*"
jupyter = "*"
notebook = "*"
ipykernel = "*"
black = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
coverage = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"