# https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "pdf-content-extraction"
version = "0.1.0"
description = "Sandbox"
authors = ["Clément Brutti-Mairesse <clement.brutti.mairesse@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ClementBM/sandbox"
repository = "https://github.com/ClementBM/sandbox"
keywords = ["mykeyword", "mykeyword", "mykeyword"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "^2.0.1"
python-docx = "^0.8.11"
pypdf = "^3.4.1"
pdfminer-six = "^20221105"
pdf2docx = "^0.5.6"
tika = "^2.6.0"
# pdf2image = "^1.16.2"
# pytesseract = "^0.3.10"
# validator-collection = "^1.5.0"

[tool.poetry.dev-dependencies]
pylint = "*"
pytest = "*"
mypy = "*"
jupyter = "*"
notebook = "*"
ipykernel = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"